# statepad

./: Cargo.toml  README.md  build.rs
src/: app.rs  main.rs  profile.rs  profiles.rs
src/domain/: automaton.rs  command.rs  display_model.rs  event.rs  mod.rs  profile.rs  system.rs
src/hardware/: mod.rs  panic_led.rs  usb.rs
src/tasks/: buttons.rs  controller.rs  display.rs  hid.rs  mod.rs  timer.rs  usb.rs
